--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,64 +1,51 @@
 {
   "chat-application": {
-    "title": { "en": "Chat Application", "ar": "برنامج دردشة" },
+    "title": { "en": "Chatty", "ar": "شاتي برنامج محادثة" },
     "desc": {
-      "en": "Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien. Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapienLorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien.",
-      "ar": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور "
+      "en": "Chatty is a chat application using Socket.IO server to establish a Web Socket connection between the server and clients, You can add friends, join rooms and Create New rooms and start real time chatting.",
+      "ar": "شاتي هوا برنامج محادثات تم بناءه بأستعمال Socket.IO وهي تقنية تتيح للخادم والمستخدم ان يبقوا على اتصال دائم وبذلك المستخدم يستطيع ان يرسل ويستقبل من السيرفر دون الحاجة لطلب المعلومات كل مرة ولكن سيكون هناك اتصال دائم يتيح ارسال واستقبال البيانات في نفس الوقت, عن طريق شاتي يمكنك اضافة اصدقائك, انضمام .لمجموعة, او انشاء مجموعتك الخاصة والبدء في الدردشة."
     },
-    "mainImgURL": "/images/Projects/Chat Application/1",
+    "mainImgURL": "/images/Projects/Chat-Application/1",
     "images": [
-      "/images/Projects/Chat Application/1",
-      "/images/Projects/Chat Application/2",
-      "/images/Projects/Chat Application/3",
-      "/images/Projects/Chat Application/4"
+      "/images/Projects/Chat-Application/1",
+      "/images/Projects/Chat-Application/2",
+      "/images/Projects/Chat-Application/3",
+      "/images/Projects/Chat-Application/4"
     ],
     "skills": [
       { "name": "React", "icon": "/icons/react.svg" },
+      { "name": "Socket.io", "icon": "/icons/socket_io.svg" },
+      { "name": "Firebase", "icon": "/icons/firebase.svg" },
       { "name": "Tailwind", "icon": "/icons/tailwindcss.svg" },
-      { "name": "Firebase", "icon": "/icons/firebase.svg" }
+      { "name": "HeadlessUI", "icon": "/icons/headlessui.svg" },
+      { "name": "React Router", "icon": "/icons/reactrouter.svg" },
+      { "name": "React Hook Forms", "icon": "/icons/reacthookform.svg" },
+      { "name": "Framer Motion", "icon": "/icons/framer.svg" },
+      { "name": "Vercel", "icon": "/icons/vercel.svg" },
+      { "name": "Express", "icon": "/icons/express.svg" }
     ],
     "github": "https://github.com/MohanadOO/chat-app",
     "preview": "https://chat-application-firebase.vercel.app/"
   },
-  "shop-application": {
-    "title": { "en": "Shop Application", "ar": "موقع تسوق" },
-    "desc": {
-      "en": "Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien. Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapienLorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien.",
-      "ar": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور "
-    },
-    "mainImgURL": "/images/Projects/Shop Application/1",
-    "images": [
-      "/images/Projects/Shop Application/1",
-      "/images/Projects/Shop Application/2",
-      "/images/Projects/Shop Application/3",
-      "/images/Projects/Shop Application/4"
-    ],
-    "skills": [
-      { "name": "React", "icon": "/icons/react.svg" },
-      { "name": "Tailwind", "icon": "/icons/tailwindcss.svg" },
-      { "name": "TypeScript", "icon": "/icons/typescript.svg" }
-    ],
-    "github": "",
-    "preview": ""
-  },
   "half-life-2-home": {
     "title": { "en": "Half Life 2", "ar": "هالف لايف 2" },
     "desc": {
-      "en": "Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien. Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapienLorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien.",
-      "ar": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور "
+      "en": "This is a clone of the Basic Agency Website but with my own tweek on the site content and I choose to show information about Half-Life 2 which is a first-person shooter game developed by Valve.",
+      "ar": "هذه الصفحة نسخة لموقع Basic Agency مع تغييرات في المحتوى المعروض وأخترت ان اعرض معلومات عامة عن لعبة Half-Life 2 وهي لعبة شوتر تم تطويرها عن طريقة شركة Valve."
     },
-    "mainImgURL": "/images/Projects/Half-Life 2/1",
+    "mainImgURL": "/images/Projects/Half-Life-2/1",
     "images": [
-      "/images/Projects/Half-Life 2/1",
-      "/images/Projects/Half-Life 2/2",
-      "/images/Projects/Half-Life 2/3",
-      "/images/Projects/Half-Life 2/4"
+      "/images/Projects/Half-Life-2/1",
+      "/images/Projects/Half-Life-2/2",
+      "/images/Projects/Half-Life-2/3",
+      "/images/Projects/Half-Life-2/4"
     ],
     "skills": [
       { "name": "React", "icon": "/icons/react.svg" },
       { "name": "Tailwind", "icon": "/icons/tailwindcss.svg" },
       { "name": "TypeScript", "icon": "/icons/typescript.svg" },
-      { "name": "Framer", "icon": "/icons/framer.svg" }
+      { "name": "Framer Motion", "icon": "/icons/framer.svg" },
+      { "name": "Vercel", "icon": "/icons/vercel.svg" }
     ],
     "github": "https://github.com/MohanadOO/half-life-2-home",
     "preview": "https://half-life-2-home.vercel.app/"
@@ -66,21 +53,21 @@
   "manage-landing-page": {
     "title": { "en": "Manage Landing Page", "ar": "مانيج صفحة هبوط" },
     "desc": {
-      "en": "Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien. Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapienLorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien.",
-      "ar": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور "
+      "en": "This is a solution to Manage Landing Page challenge provided on Frontend Mentor which aims to help improve coding skills by building realistic projects.",
+      "ar": "هذا حل لأحدى تحديات موقع Frontend Mentor الذي يعرض الكثير من التحديات التي تساعد على سقل مهارات المبرمجين عن طريق بناء مشاريع واقعية."
     },
-    "mainImgURL": "/images/Projects/Manage Landing Page/1",
+    "mainImgURL": "/images/Projects/Manage-Landing-Page/1",
     "images": [
-      "/images/Projects/Manage Landing Page/1",
-      "/images/Projects/Manage Landing Page/2",
-      "/images/Projects/Manage Landing Page/3",
-      "/images/Projects/Manage Landing Page/4"
+      "/images/Projects/Manage-Landing-Page/1",
+      "/images/Projects/Manage-Landing-Page/2",
+      "/images/Projects/Manage-Landing-Page/3",
+      "/images/Projects/Manage-Landing-Page/4"
     ],
     "skills": [
       { "name": "React", "icon": "/icons/react.svg" },
       { "name": "Tailwind", "icon": "/icons/tailwindcss.svg" },
       { "name": "Swiper", "icon": "/icons/swiper.svg" },
-      { "name": "Headless UI", "icon": "/icons/headlessui.svg" }
+      { "name": "HeadlessUI", "icon": "/icons/headlessui.svg" }
     ],
     "github": "https://github.com/MohanadOO/manage-landing-page",
     "preview": "https://manage-landing-page-plum.vercel.app/"
@@ -88,20 +75,21 @@
   "bookmark-landing-page": {
     "title": { "en": "Bookmark Landing Page", "ar": "بووكمارك صفحة هبوط" },
     "desc": {
-      "en": "Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien. Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapienLorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien.",
-      "ar": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور "
+      "en": "This is a solution to Bookmark Landing Page challenge provided on Frontend Mentor which aims to help improve coding skills by building realistic projects.",
+      "ar": "هذا حل لأحدى تحديات موقع Frontend Mentor الذي يعرض الكثير من التحديات التي تساعد على سقل مهارات المبرمجين عن طريق بناء مشاريع واقعية."
     },
-    "mainImgURL": "/images/Projects/Bookmark Landing Page/1",
+    "mainImgURL": "/images/Projects/Bookmark-Landing-Page/1",
     "images": [
-      "/images/Projects/Bookmark Landing Page/1",
-      "/images/Projects/Bookmark Landing Page/2",
-      "/images/Projects/Bookmark Landing Page/3",
-      "/images/Projects/Bookmark Landing Page/4"
+      "/images/Projects/Bookmark-Landing-Page/1",
+      "/images/Projects/Bookmark-Landing-Page/2",
+      "/images/Projects/Bookmark-Landing-Page/3",
+      "/images/Projects/Bookmark-Landing-Page/4"
     ],
     "skills": [
       { "name": "React", "icon": "/icons/react.svg" },
       { "name": "Tailwind", "icon": "/icons/tailwindcss.svg" },
-      { "name": "Headless UI", "icon": "/icons/headlessui.svg" }
+      { "name": "Headless UI", "icon": "/icons/headlessui.svg" },
+      { "name": "Vercel", "icon": "/icons/vercel.svg" }
     ],
     "github": "https://github.com/MohanadOO/bookmark-landing-page",
     "preview": "https://bookmark-landing-page-beta-nine.vercel.app/"
@@ -109,19 +97,20 @@
   "room-home-page": {
     "title": { "en": "Room Home Page", "ar": "صفحة منزل رئيسية" },
     "desc": {
-      "en": "Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien. Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapienLorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien.",
-      "ar": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور "
+      "en": "This is a solution to Room Home Page challenge provided on Frontend Mentor which aims to help improve coding skills by building realistic projects.",
+      "ar": "هذا حل لأحدى تحديات موقع Frontend Mentor الذي يعرض الكثير من التحديات التي تساعد على سقل مهارات المبرمجين عن طريق بناء مشاريع واقعية."
     },
-    "mainImgURL": "/images/Projects/Room Home Page/1",
+    "mainImgURL": "/images/Projects/Room-Home-Page/1",
     "images": [
-      "/images/Projects/Room Home Page/1",
-      "/images/Projects/Room Home Page/2",
-      "/images/Projects/Room Home Page/3",
-      "/images/Projects/Room Home Page/4"
+      "/images/Projects/Room-Home-Page/1",
+      "/images/Projects/Room-Home-Page/2",
+      "/images/Projects/Room-Home-Page/3",
+      "/images/Projects/Room-Home-Page/4"
     ],
     "skills": [
       { "name": "React", "icon": "/icons/react.svg" },
-      { "name": "Tailwind", "icon": "/icons/tailwindcss.svg" }
+      { "name": "Tailwind", "icon": "/icons/tailwindcss.svg" },
+      { "name": "Vercel", "icon": "/icons/vercel.svg" }
     ],
     "github": "https://github.com/MohanadOO/room-homepage",
     "preview": "https://room-homepage-phi-liard.vercel.app/"
