--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "tsPreview": "tsc && vite build && vite preview"
   },
   "dependencies": {
-    "framer-motion": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
