Change local i18n to i18next package 📦

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "src/i18n"],
+  "include": ["src", "src/i18n", "src/i18n.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
