--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite build && vite preview",
-    "tsPreview": "tsc && vite build && vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "preview": "next build && next preview",
+    "start": "next start"
   },
   "dependencies": {
     "framer-motion": "^7.2.1",
-    "i18next": "^21.9.1",
-    "i18next-browser-languagedetector": "^6.1.5",
-    "i18next-http-backend": "^1.4.1",
+    "next": "^12.3.1",
+    "next-themes": "^0.2.1",
+    "ni18n": "^1.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-i18next": "^11.18.5",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0"
+    "react-i18next": "^11.18.6",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
-    "typescript": "^4.6.3",
-    "vite": "^3.0.8"
+    "typescript": "^4.6.3"
   }
 }
