Update to Next 13 ✨

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@fontsource/cairo": "^4.5.11",
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pattaya": "^4.5.10",
+    "@portabletext/react": "^2.0.0",
+    "@sanity/image-url": "^1.0.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "framer-motion": "^7.2.1",
-    "next": "^12.3.1",
-    "next-sanity": "^0.8.4",
+    "next": "^13.1.4",
+    "next-sanity": "^3.1.4",
     "next-themes": "^0.2.1",
     "ni18n": "^1.0.5",
     "react": "^18.0.0",
