--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/pattaya": "^4.5.10",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.2.4",
     "@tailwindcss/line-clamp": "^0.4.2",
     "framer-motion": "^7.2.1",
     "next": "^13.1.4",
@@ -24,7 +25,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.6",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "sanity": "^3.2.4",
+    "sanity-plugin-iframe-pane": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
