--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pattaya": "^4.5.10",
     "@portabletext/react": "^2.0.0",
+    "@sanity/code-input": "^4.0.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.2.4",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -26,6 +27,7 @@
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.6",
     "react-icons": "^4.4.0",
+    "react-refractor": "^2.1.7",
     "sanity": "^3.2.4",
     "sanity-plugin-iframe-pane": "^2.1.1"
   },
