--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/vision": "^3.2.5",
     "@tailwindcss/line-clamp": "^0.4.2",
     "framer-motion": "^7.2.1",
+    "i18next": "^22.4.9",
     "next": "^13.1.4",
     "next-sanity": "^3.1.4",
     "next-themes": "^0.2.1",
