--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "framer-motion": "^7.2.1",
     "i18next": "^22.4.9",
+    "i18next-chained-backend": "^4.2.0",
+    "i18next-localstorage-backend": "^4.1.0",
     "next": "^13.1.4",
     "next-sanity": "^3.1.4",
     "next-themes": "^0.2.1",
