feat: :mag: add next-seo and @vercel/og

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.2.5",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@vercel/og": "^0.0.27",
     "framer-motion": "^7.2.1",
     "i18next": "^22.4.9",
     "i18next-chained-backend": "^4.2.0",
     "i18next-localstorage-backend": "^4.1.0",
     "next": "^13.1.4",
     "next-sanity": "^3.1.4",
+    "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
     "ni18n": "^1.0.5",
     "react": "^18.0.0",
