--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
     "jsx": "preserve",
     "skipLibCheck": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "sanity/sanity.cli.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "sanity/sanity.cli.ts",
+    "sanity/schemas/blockContent.tsx"
+  ],
   "exclude": ["node_modules"]
 }
