--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/cairo": "^4.5.11",
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pattaya": "^4.5.10",
+    "@next/env": "^13.1.6",
     "@portabletext/react": "^2.0.0",
     "@sanity/code-input": "^4.0.0",
     "@sanity/color-input": "^3.0.2",
@@ -23,9 +24,10 @@
     "framer-motion": "^7.2.1",
     "i18next": "^22.4.9",
     "i18next-chained-backend": "^4.2.0",
+    "i18next-http-backend": "^2.1.1",
     "i18next-localstorage-backend": "^4.1.0",
     "next": "^13.1.4",
-    "next-sanity": "^3.1.4",
+    "next-sanity": "^4.1.5",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
     "ni18n": "^1.0.5",
@@ -34,10 +36,12 @@
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.6",
     "react-icons": "^4.4.0",
+    "react-is": "^18.2.0",
     "react-refractor": "^2.1.7",
-    "sanity": "^3.2.4",
+    "sanity": "^3.5.0",
     "sanity-plugin-iframe-pane": "^2.1.1",
-    "sanity-plugin-vercel-deploy": "^3.3.3"
+    "sanity-plugin-vercel-deploy": "^3.3.3",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
