--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sanity/vision": "^3.2.5",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@vercel/og": "^0.0.27",
+    "feed": "^4.2.2",
     "framer-motion": "^7.2.1",
     "i18next": "^22.4.9",
     "i18next-chained-backend": "^4.2.0",
