--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/cairo": "^4.5.11",
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pattaya": "^4.5.10",
+    "@headlessui/react": "^1.7.13",
     "@next/env": "^13.1.6",
     "@portabletext/react": "^2.0.0",
     "@sanity/code-input": "^4.0.0",
