--- a/package.json
+++ b/package.json
@@ -13,23 +13,25 @@
     "@fontsource/cairo": "^4.5.13",
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pattaya": "^4.5.10",
-    "@headlessui/react": "^1.7.13",
-    "@next/env": "^13.2.4",
+    "@headlessui/react": "^1.7.14",
+    "@next/env": "^13.3.0",
     "@portabletext/react": "^2.0.2",
     "@sanity/code-input": "^4.1.0",
     "@sanity/color-input": "^3.0.2",
+    "@sanity/icons": "2",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.7.1",
-    "@tailwindcss/line-clamp": "^0.4.2",
+    "@sanity/types": "3",
+    "@sanity/ui": "1",
+    "@sanity/vision": "^3.8.3",
     "@vercel/og": "^0.0.27",
     "feed": "^4.2.2",
     "framer-motion": "^7.10.3",
-    "i18next": "^22.4.13",
+    "i18next": "^22.4.14",
     "i18next-chained-backend": "^4.2.0",
     "i18next-http-backend": "^2.2.0",
-    "i18next-localstorage-backend": "^4.1.0",
-    "next": "^13.2.4",
-    "next-sanity": "^4.1.5",
+    "i18next-localstorage-backend": "^4.1.1",
+    "next": "^13.3.0",
+    "next-sanity": "^4.1.7",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
     "ni18n": "^1.0.5",
@@ -40,7 +42,7 @@
     "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
     "react-refractor": "^2.1.7",
-    "sanity": "^3.7.1",
+    "sanity": "^3.8.3",
     "sanity-plugin-iframe-pane": "^2.3.0",
     "sanity-plugin-vercel-deploy": "^3.3.3",
     "styled-components": "^5.3.9"
@@ -50,7 +52,7 @@
     "@types/react": "18.0.20",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5"
   }
 }
