--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sanity": "^3.8.3",
     "sanity-plugin-iframe-pane": "^2.3.0",
     "sanity-plugin-vercel-deploy": "^3.3.3",
+    "slugify": "^1.6.6",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
