--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "sanity-plugin-iframe-pane": "^2.3.0",
     "sanity-plugin-vercel-deploy": "^3.3.3",
     "slugify": "^1.6.6",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "tailwind-scrollbar": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
