--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fontsource/aref-ruqaa": "^4.5.11",
-    "@fontsource/cairo": "^4.5.13",
-    "@fontsource/lato": "^4.5.10",
-    "@fontsource/pattaya": "^4.5.10",
     "@headlessui/react": "^1.7.14",
     "@next/env": "^13.3.0",
+    "@next/font": "^13.3.1",
     "@portabletext/react": "^2.0.2",
     "@sanity/code-input": "^4.1.0",
     "@sanity/color-input": "^3.0.2",
@@ -31,6 +28,7 @@
     "i18next-http-backend": "^2.2.0",
     "i18next-localstorage-backend": "^4.1.1",
     "next": "^13.3.0",
+    "next-i18next": "^13.2.2",
     "next-sanity": "^4.1.7",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
