fix(sanity): 🐛 Embed post preview panel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "Ruqaa",
     "Tailwindcss"
   ],
-  "editor.acceptSuggestionOnEnter": "on"
+  "editor.acceptSuggestionOnEnter": "on",
+  "conventionalCommits.scopes": ["sanity"]
 }
