--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@sanity/icons": "2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "3",
-    "@sanity/ui": "1",
+    "@sanity/ui": "^1.3.2",
     "@sanity/vision": "^3.8.3",
     "@vercel/og": "^0.0.27",
     "feed": "^4.2.2",
