build: 📦️ Update dependencies

--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
-    "@next/env": "^13.3.0",
-    "@next/font": "^13.3.1",
-    "@portabletext/react": "^2.0.2",
-    "@sanity/code-input": "^4.1.0",
-    "@sanity/color-input": "^3.0.2",
-    "@sanity/icons": "2",
+    "@next/env": "^13.4.3",
+    "@next/font": "^13.4.3",
+    "@portabletext/react": "^2.0.3",
+    "@sanity/code-input": "^4.1.1",
+    "@sanity/color-input": "^3.1.0",
+    "@sanity/icons": "^2.3.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "3",
-    "@sanity/ui": "^1.3.2",
-    "@sanity/vision": "^3.8.3",
+    "@sanity/types": "^3.11.1",
+    "@sanity/ui": "^1.3.3",
+    "@sanity/vision": "^3.11.1",
     "@vercel/og": "^0.0.27",
     "feed": "^4.2.2",
     "framer-motion": "^7.10.3",
-    "i18next": "^22.4.14",
+    "i18next": "^22.5.0",
     "i18next-chained-backend": "^4.2.0",
-    "i18next-http-backend": "^2.2.0",
+    "i18next-http-backend": "^2.2.1",
     "i18next-localstorage-backend": "^4.1.1",
-    "next": "^13.3.0",
+    "next": "^13.4.3",
     "next-i18next": "^13.2.2",
-    "next-sanity": "^4.1.7",
+    "next-sanity": "^4.3.3",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
-    "ni18n": "^1.0.5",
+    "ni18n": "^1.1.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,19 +40,19 @@
     "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
     "react-refractor": "^2.1.7",
-    "sanity": "^3.8.3",
-    "sanity-plugin-iframe-pane": "^2.3.0",
-    "sanity-plugin-vercel-deploy": "^3.3.3",
+    "sanity": "^3.11.1",
+    "sanity-plugin-iframe-pane": "^2.3.1",
+    "sanity-plugin-vercel-deploy": "^3.3.4",
     "slugify": "^1.6.6",
-    "styled-components": "^5.3.9",
-    "tailwind-scrollbar": "^3.0.0"
+    "styled-components": "^5.3.10",
+    "tailwind-scrollbar": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
 }
