--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
-    "@next/env": "^13.4.3",
+    "@next/env": "^13.4.4",
     "@portabletext/react": "^2.0.3",
     "@sanity/code-input": "^4.1.1",
     "@sanity/color-input": "^3.1.0",
     "@sanity/icons": "^2.3.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "^3.11.1",
+    "@sanity/types": "^3.11.3",
     "@sanity/ui": "^1.3.3",
-    "@sanity/vision": "^3.11.1",
+    "@sanity/vision": "^3.11.3",
+    "@types/styled-components": "^5.1.26",
     "@vercel/og": "^0.0.27",
     "feed": "^4.2.2",
     "framer-motion": "^7.10.3",
@@ -26,7 +27,7 @@
     "i18next-chained-backend": "^4.2.0",
     "i18next-http-backend": "^2.2.1",
     "i18next-localstorage-backend": "^4.1.1",
-    "next": "^13.4.3",
+    "next": "^13.4.4",
     "next-i18next": "^13.2.2",
     "next-sanity": "^4.3.3",
     "next-seo": "^5.15.0",
@@ -36,21 +37,21 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-is": "^18.2.0",
     "react-refractor": "^2.1.7",
-    "sanity": "^3.11.1",
+    "sanity": "^3.11.3",
     "sanity-plugin-iframe-pane": "^2.3.1",
     "sanity-plugin-vercel-deploy": "^3.3.4",
     "slugify": "^1.6.6",
-    "styled-components": "^5.3.10",
+    "styled-components": "^5.3.11",
     "tailwind-scrollbar": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
+    "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
