style: 💄 Improve Swiper images for projects

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@next/env": "^13.4.4",
     "@portabletext/react": "^2.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@sanity/code-input": "^4.1.1",
     "@sanity/color-input": "^3.1.0",
     "@sanity/icons": "^2.3.1",
@@ -26,6 +27,7 @@
     "@vercel/og": "^0.0.27",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "8.0.0-rc17",
     "feed": "^4.2.2",
     "framer-motion": "^7.10.3",
     "i18next": "^22.5.0",
