fix(projects): 🐛 Delete the extra padding in the Carousel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,5 @@
     "Tailwindcss"
   ],
   "editor.acceptSuggestionOnEnter": "on",
-  "conventionalCommits.scopes": ["sanity", "blog"]
+  "conventionalCommits.scopes": ["sanity", "blog", "projects"]
 }
