--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@next/env": "^13.4.4",
     "@portabletext/react": "^2.0.3",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@sanity/code-input": "^4.1.1",
     "@sanity/color-input": "^3.1.0",
